# NeuroLady_Persona_Engine

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STATUS.md  pyproject.toml
chat/: README.md  download_model.py  serve.py  smoke.py
developer files/: Audience.md  CLAUDE.md  PROJECT_STATUS.md  Project Concept.md  architecture.md  feature_description_guide.md  image_benchmark_report.md  issue_log.md  test_driven_development.md  user_metrics.md  video_benchmark_report.md
image/: .gitignore  .venv  README.md  _install_comfy.sh  _queue_native.sh  bench_workflow_aio.json  benchmark.py  comfyui  download_model.py  download_native.py  models
qdrant_data_bio/: meta.json
scripts/: install-git-hooks.sh  safe-checkout.sh
services/: __init__.py
tests/: conftest.py  test_anchor_framing.py  test_black_frame_retry.py  test_f001_coverage.py  test_f001_handlers.py  test_f001_onboarding_domain.py  test_f001_reconnect.py  test_f001_views.py  test_f002_conversation.py  test_f002_coverage.py  test_f003_coverage.py  test_f003_humanize.py  test_f004_coverage.py  test_f004_memory.py  test_f004_semantic.py  test_f005_relationship.py  test_f006_biography.py  test_f006_life_engine.py  test_f007_scheduler.py  test_f008_image_runner.py  test_f009_identity.py  test_f010_prompt_authoring.py  test_f011_daily_batch.py  test_f012_photo_delivery.py  test_f013_presentation.py  test_f014_intimacy_gate.py  test_f015_keyframes.py  test_f020_media_intent.py  test_f021_retention_and_reuse.py  test_fr_012_20_pacing_toggle.py  test_identity_directive.py  test_image_integration.py  test_iss_002_003_004.py  test_iss_006_media_context.py  test_iss_007_lock_and_silence.py  test_iss_008_scene_description.py  test_iss_009_ru_intimate_classifier.py  test_iss_012_generated_opener.py  test_photo_path_e2e.py
video/: README.md  benchmark.py  download_model.py  (+1 more)
(+142 files in other folders)
