[project]
name = "neurolady"
version = "0.1.0"
description = "NeuroLady — Telegram-based hyper-realistic AI companion (application services)"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
postgres = [
    "asyncpg>=0.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["services*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
