[project]
name = "neurolady"
version = "0.1.0"
description = "NeuroLady — Telegram-based hyper-realistic AI companion (application services)"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # IANA tz database fallback for zoneinfo — systems may lack legacy keys (e.g. Europe/Kiev)
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
postgres = [
    "asyncpg>=0.29",
]
# F-004 semantic memory half: vector store + local embedding model. Optional — without it the
# memory system degrades to keyword recall (FR-004-40), so the bot still runs.
semantic = [
    "qdrant-client>=1.7",
    "fastembed>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["services*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
